# data_science_models

./: README.md  pyproject.toml
src/curso_machine_learning/: avaliacao_regressao.py  preprocesso.py  regressao_arvore_decisao.py  regressao_floresta_aleatoria.py  regressao_linear.py  regressao_linear_multipla.py  regressao_polinomial.py  regressao_vetor_suporte.py
